src/objects/Case.object
<CustomObject>
    <fields>
        <fullName>Is_the_wheelchair_collapsible__c</fullName>
        <description>It describes  whether the wheelchair is collapsible or not</description>
        <label>Is The Wheelchair Collapsible?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Is_the_wheelchair_power_Note__c</fullName>
        <description>It describes the detail information about  the wheelchair power battery type.</description>
        <label>Wheelchair Power Note (Dry or Wet/Gel)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Is_the_wheelchair_power__c</fullName>
        <description>It describes whether the wheelchair has power or not</description>
        <label>Is The Wheelchair Power?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Is_your_family_comfortable_in_rendal_car__c</fullName>
        <description>It  describes about wish families vehicle comfortable.</description>
        <label>Is Your Family Comfortable In Rental Car</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Knowledge_Link__c</fullName>
        <label>Knowledge Link</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>It is used to look up to the lead record</description>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LiabilitySignerMapKeyPair__c</fullName>
        <description>This field is used to store the Name and their pair when docusign call out is sent.</description>
        <label>Hidden LiabilitySignerMapKeyPair</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Liability_Release_and_Authorization__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Liability release authorization</description>
        <label>Liability Release And Authorization </label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Local_MCA_Team__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This Field is Used to populate the Medical Contact values from Contact.</description>
        <label>Chapter Medical Advisor</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.RecordTypeId</field>
                <operation>equals</operation>
                <value>Medical Professional</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Location_Address__c</fullName>
        <description>It capture the wish presentation location address.</description>
        <label>Location Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>MAC_Email__c</fullName>
        <description>This field is used to store the MAC email values from Account.</description>
        <label>Hidden Medical Advisor Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>MY_WISH_IS_TO__c</fullName>
        <description>It capture the details of  wish child, who wish would be.</description>
        <label>MY WISH IS TO…</label>
        <length>1500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Medical_Advisor_Email__c</fullName>
        <description>This field is used to store the medical adviser email address.</description>
        <formula>Local_MCA_Team__r.npe01__HomeEmail__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Medical Advisor Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Medical_Condition__c</fullName>
        <description>It is used to capture the primary diagnosis</description>
        <formula>Contact.Diagnosis__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary Diagnosis</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Medical_Summary_Attachments__c</fullName>
        <description>This field is used to capture the associated lead attachment links</description>
        <label>Medical Summary Attachments</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Medication_require_refrigeration_Note__c</fullName>
        <description>It  capture the detailed information about medication require refrigeration</description>
        <label>Refrigerated Medication Note</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Medication_require_refrigeration__c</fullName>
        <description>It  capture the information about whether the Medication require refrigeration or not</description>
        <label>Refrigerated medication required?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Medication_require_refrigeration_name__c</fullName>
        <description>It define the details of medication require refrigeration name</description>
        <label>Refrigerated Medication Names</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Meet_PWL_Criteria__c</fullName>
        <description>This field is used to capture the meet pwl criteria</description>
        <label>Meet PWL Criteria</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Migrated_Record__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Identity whether the record is migrated record or not</description>
        <label>Migrated Record</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Name_of_Location__c</fullName>
        <description>It capture the wish presentation location name.</description>
        <label>Name of Location</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_of_wheelchair_collapsible__c</fullName>
        <description>It holds the name of wheelchair collapsible</description>
        <label>Collapsible Wheelchair Names</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Names_for_receiving_nursing_care__c</fullName>
        <description>It has list of names that who are receiving nursing care now</description>
        <label>Receiving Nursing Care Names</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Non_Participant_Emergency_Number__c</fullName>
        <formula>Account.Emergency_Contact_Phone__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Non-Participant Emergency Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Option1__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field used in wish liability form</description>
        <label>Hidden Option1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Option2__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field used in wish liability form</description>
        <label>Hidden Option2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Out_of_Territory__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used in parent case.</description>
        <label>Out of Territory</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Pariticipant_name_havingWheelchair_Power__c</fullName>
        <description>It defines who is having power wheel chair</description>
        <label>Power Wheelchair Names</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Part_B_received_date__c</fullName>
        <description>It is used to capture received date of part B</description>
        <label>Part B Received Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Part_B_sent_date__c</fullName>
        <description>It is used to capture sent date of the part B</description>
        <label>Part B Sent Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Participant_Name_for_Dietary_Restriction__c</fullName>
        <description>It holds the name list of dietary restrictions</description>
        <label>Dietary Restriction Names</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Participant_dietary_restrictions_Note__c</fullName>
        <description>It will capture note for participant  dietary restrictions</description>
        <label>Dietary Restriction Note</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Participant_dietary_restrictions__c</fullName>
        <description>It  describes the participant  has special dietary restrictions or not</description>
        <label>Participant  Dietary Restrictions?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Participant_have_allergies_to_food_Note__c</fullName>
        <description>It capture the information about participant have allergies to food</description>
        <label>Participant With Allergy Note</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Participant_have_allergies_to_food__c</fullName>
        <description>It will capture information about  participant having  allergies to food or not</description>
        <label>Participant With Allergy?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Participant_have_valid_passports_Note__c</fullName>
        <description>it holds the information about the participant who having valid passport or not</description>
        <label>Passport Note</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Participant_have_valid_passports__c</fullName>
        <description>It will capture whether the Participant have valid passport or not</description>
        <label>Participant Have Passports?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Participant_have_valid_photo_ID_Note__c</fullName>
        <description>It will captures participant valid photo ID information</description>
        <label>Valid ID Note</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Participant_require_a_wheelchair_Note__c</fullName>
        <description>It will capture detail information about participant require a wheelchair (if its required)</description>
        <label>Wheelchair Required Note (H,W,D)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Participant_require_a_wheelchair__c</fullName>
        <description>It shows the choice , if the participant require a wheelchair or not</description>
        <label>Participant Require A Wheelchair?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Participant_require_medical_suppliesNote__c</fullName>
        <description>It will capture detailed information about  medical supplies</description>
        <label>Required Medical Supplies Note</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Participant_require_medical_supplies__c</fullName>
        <description>It will capture, requested participant require medical supplies information</description>
        <label>Participant Require Medical Supplies?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Participant_require_oxygen_Note__c</fullName>
        <description>It will capture detail information about how often participant require oxygen</description>
        <label>Oxygen Required Note</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Participant_require_oxygen_how_often__c</fullName>
        <description>It will capture whether participant require oxygen or not</description>
        <label>Participant Require Oxygen?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Passports__c</fullName>
        <defaultValue>false</defaultValue>
        <description>It is used to identify the passport</description>
        <label>Passports</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Please_Explain__c</fullName>
        <description>It is used to capture detail explanatiion</description>
        <inlineHelpText>Not Appropriate:  I am familiar with the patient&apos;s physical condition and certify the wish is not medically appropriate at this time.</inlineHelpText>
        <label>Please Explain</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Potential_Driver_Expiration_Date__c</fullName>
        <description>It shows the potential  driver Expiration Date</description>
        <label>Potential Driver Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Potential_Driver_Name__c</fullName>
        <description>It will capture the details of  Potential Driver Name</description>
        <label>Potential Driver Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Potential_Driver_State__c</fullName>
        <description>It capture the details of potential driver state</description>
        <label>Potential Driver State</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Potential_Valid_D_L__c</fullName>
        <description>It will capture the details  Potential Potential Valid D.L</description>
        <label>Potential Valid D.L. #</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Preferred_Driver_Expiration_Date__c</fullName>
        <description>It will hold the details about Preferred Driver Expiration Date</description>
        <label>Preferred Driver Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Preferred_Driver_Name__c</fullName>
        <description>It  capture the details of  Preferred Driver Name</description>
        <inlineHelpText>Preferred Driver, Name as it appears on license</inlineHelpText>
        <label>Preferred Driver Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Preferred_Driver_State__c</fullName>
        <description>It capture the details of Preferred Driver State</description>
        <label>Preferred Driver State</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Preferred_Driver_Valid_D_L__c</fullName>
        <description>It will capture the details about Preferred Driver Valid D.L.</description>
        <label>Preferred Driver Valid D.L. #</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Presentation_Date__c</fullName>
        <description>It Capture the wish Presentation Date</description>
        <label>Presentation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Projected_Status__c</fullName>
        <description>This will indicate whether projected is approved or pending.</description>
        <label>Projected Status</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Submitted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Qualified_Date__c</fullName>
        <description>It will hold Case created date.</description>
        <inlineHelpText>Date the Diagnosis Verification is reviewed and child&apos;s eligibility is confirmed</inlineHelpText>
        <label>Qualified Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Qualifying_Medical_Professional_Email__c</fullName>
        <description>It store the Qualifying Medical Professional Email.</description>
        <label>Qualifying Medical Professional Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Qualifying_Medical_Professional_Name__c</fullName>
        <description>It Store the medical professional Name.</description>
        <label>Qualifying Medical Professional Name</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Account_ID__c</fullName>
        <description>ID</description>
        <label>RE Account ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Anticipated_Start_Date__c</fullName>
        <description>Tentative</description>
        <label>RE Anticipated Start Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Assigned_Date_c__c</fullName>
        <description>Assigned Date</description>
        <label>RE Assigned_Date__c</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Closed_Date__c</fullName>
        <description>Closed</description>
        <label>RE Closed Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Created_Date__c</fullName>
        <description>DATE_ADDED</description>
        <label>RE Created Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_DNQ_Date_c__c</fullName>
        <description>DNQ Determined</description>
        <label>RE DNQ_Date__c</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Description__c</fullName>
        <description>Description</description>
        <label>RE Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_End_Date__c</fullName>
        <description>Actual</description>
        <label>RE End Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Extended_End_Date__c</fullName>
        <description>Actual Return Date</description>
        <label>RE Extended End Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Extended_Start_Date__c</fullName>
        <description>Actual Departure Date</description>
        <label>RE Extended Start Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_FE_Description__c</fullName>
        <description>RE-FE Description</description>
        <formula>Contact.LastName + &apos; &apos; +Contact.FirstName + &apos; &apos; + IF(!ISNULL(Contact.Birthdate),(TEXT(MONTH(Contact.Birthdate)) &amp; &quot;-&quot; &amp; TEXT(DAY(Contact.Birthdate)) &amp; &quot;-&quot; &amp; TEXT(YEAR(Contact.Birthdate))), &apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RE-FE Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Hold_Date__c</fullName>
        <description>Incomplete Date</description>
        <label>RE Hold Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Import_Id__c</fullName>
        <description>&quot;MAWWISHDATAID, IMPORTID
&quot;</description>
        <label>RE Import Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Inactive_Date__c</fullName>
        <description>Incomplete Date</description>
        <label>RE Inactive Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Qualified_Date__c</fullName>
        <description>Qualified</description>
        <label>RE Qualified Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Ready_to_Assign_Date_c__c</fullName>
        <description>Ready to Assign</description>
        <label>RE Ready_to_Assign_Date__c</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Rush__c</fullName>
        <description>Rush</description>
        <label>RE Rush</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Status__c</fullName>
        <description>Status</description>
        <label>RE Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Sub_Status__c</fullName>
        <description>SubStatus</description>
        <label>RE Sub Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Wish_Clearance_Received_Date_c__c</fullName>
        <description>Approved(Part B)</description>
        <label>RE Wish_Clearance_Received_Date__c</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Wish_Determined_Date__c</fullName>
        <description>Wish Determined</description>
        <label>RE Wish Determined Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Wish_Type__c</fullName>
        <description>National_Type</description>
        <label>RE Wish Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ready_to_Assign_Date__c</fullName>
        <description>Date will be captured When status is changed to Ready To Assign</description>
        <inlineHelpText>Date the welcome call/packet task is completed and the family is ready to be met by volunteers</inlineHelpText>
        <label>Ready to Assign Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Referral_Date__c</fullName>
        <description>It hods the Date of Wish Referral form submitted.</description>
        <inlineHelpText>Date the Initial lead from an authorized referral source is received</inlineHelpText>
        <label>Referral Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <description>Wish child region</description>
        <formula>Contact.Region_Code__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requested_Participant_Name_forWheelchair__c</fullName>
        <description>it describes the requested participant name for wheelchair</description>
        <label>Wheelchair Required Names</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Requested_Participant_Name_for_Allergies__c</fullName>
        <description>it describes the Requested Participant Name for Allergies</description>
        <label>Participant With Allergy Names</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Requested_Participant_Name_for_OtherNeed__c</fullName>
        <description>it describes the requested participant name for  other medical supplies</description>
        <label>Required Medical Supplies Names</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Requested_Participant_Name_for_Oxygen__c</fullName>
        <description>It descripes the requested participant name for oxygen</description>
        <label>Oxygen Required Names</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Rush_Explanation__c</fullName>
        <description>If the Rush checkbox checked we need to explain the reason for why this wish need to process quicker</description>
        <label>Rush Explanation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rush_Timeframe__c</fullName>
        <description>This filed value indicates time line for the wish process</description>
        <label>Rush Timeframe</label>
        <picklist>
            <picklistValues>
                <fullName>ASAP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0-30 days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>31-90 days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>91+</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Rush__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used to identify whether the wish is need to process quicker or not</description>
        <label>Rush</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SignerMapKeyPair__c</fullName>
        <description>It will hold the signer name for who are going to sign the docusign.</description>
        <label>Hidden SignerMapKeyPair</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Single_Parent_Form__c</fullName>
        <defaultValue>false</defaultValue>
        <description>It is used to identify single parent form attached or not</description>
        <label>Single Parent Form</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sit_up_takeoff_landing_on_airplane_Note__c</fullName>
        <description>It will capture detailed information about  all are requested participants able to sit up during takeoff/landing
on airplane? If no, note it who cannot to be able to sit on airplane</description>
        <label>Sit Up Take Off/Landing Note</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Sit_up_takeoff_landing_on_airplane__c</fullName>
        <description>It will capture details about, all Are  requested participants able to sit up during takeoff/landing
on airplane</description>
        <label>Sit Up Take Off/Landing?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <description>This field will capture start date</description>
        <inlineHelpText>Confirmed date that the wish will begin (departure)</inlineHelpText>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status_Date__c</fullName>
        <description>It will capture the date when status is updating.</description>
        <label>Status  Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sub_Status__c</fullName>
        <description>This field will be used to know the progress(Current status) of the wish</description>
        <label>Sub Status</label>
        <picklist>
            <controllingField>Status</controllingField>
            <picklistValues>
                <fullName>Abandoned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Age Expiration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assign in Portal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deceased</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Elective</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Family Delay</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Family Delay Closing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Loss of Contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Moved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-Viewable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Refused</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reassigned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Additional Interview</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Within Policy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Need Clarification</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Submitted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Response</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Age</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Previous Wish</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Survey_Email__c</fullName>
        <description>It will holds survey email</description>
        <inlineHelpText>Add the email address that should be used for post wish evaluation survey.</inlineHelpText>
        <label>Survey Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Test_Record__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to identify whether the record is a test record</description>
        <label>Test Record</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>This_is_my_wish_because__c</fullName>
        <description>It capture the Wish reason of a Wish Child.</description>
        <label>This Is My Wish Because…</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Time__c</fullName>
        <description>It Capture the wish Presentation time.</description>
        <label>Time</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>To_me_the_most_important_part_of_my_wish__c</fullName>
        <description>It capture the most important part of wish of the Wish Child.</description>
        <label>To Me,The Most Important Part Of My Wish</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Total_Hour_Spent_Hidden__c</fullName>
        <description>This field is used to store the value of total hour spent by the volunteer opportunity to complete this task.</description>
        <label>Total Hour Spent Hidden</label>
        <precision>13</precision>
        <scale>9</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Hour_Spent__c</fullName>
        <description>It is used to capture the total hour spent for each wish</description>
        <label>Total Hour Spent</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UniqueWishRecordIdentifier__c</fullName>
        <formula>Unique_Wish_Record_Identifier__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unique Wish Record Identifier</label>
        <type>Text</type>
    </fields>
</CustomObject>